feat(car route patch): added route patch in car.
